// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smooch-action-collect-message-response Everthing is successful Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-amooch-api-url",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Walkthrough passes in the correct arguments to secretClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Walkthrough passes in the correct arguments to smooch.appUsers.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "message": Object {
        "blockChatInput": false,
        "fields": Array [
          Object {
            "label": "message",
            "name": "collect-message",
            "type": "text",
          },
        ],
        "metadata": Object {
          "actionId": "5e31c81640a22c000f5d7f28",
          "from": "from",
          "interactionId": "66d83870-30df-4a3b-8801-59edff162070",
          "subId": "5e31c81640a22c000f5d7f55",
          "type": "system",
        },
        "role": "appMaker",
        "type": "form",
      },
      "userId": "5e31c81640a22c000f5d7f90",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Walkthrough passes in the correct arguments to sqs.getQueueUrl() 1`] = `
Array [
  Array [
    Object {
      "QueueName": "us-east-1-dev-update-interaction-metadata",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Walkthrough passes in the correct arguments to sqs.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "MessageBody": "{\\"tenantId\\":\\"66d83870-30df-4a3b-8801-59edff162034\\",\\"interactionId\\":\\"66d83870-30df-4a3b-8801-59edff162070\\",\\"source\\":\\"smooch\\",\\"metadata\\":{\\"app-id\\":\\"5e31c81640a22c000f5d7f28\\",\\"user-id\\":\\"5e31c81640a22c000f5d7f90\\",\\"collect-actions\\":[{\\"actionId\\":\\"5e31c81640a22c000f5d7f28\\",\\"subId\\":\\"5e31c81640a22c000f5d7f55\\"}]}}",
      "QueueUrl": "queueurl",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful when the message contains more than 128 characters 1`] = `"messagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessa..."`;

exports[`smooch-action-collect-message-response throws an error when there is a problem retrieving digital channels credentials (thrown by SmoochCore) 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem retrieving digital channels credentials 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem sending collect-message 1`] = `"Error sending collect-message"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem updating interaction metadata 1`] = `"Error updating interaction metadata"`;
